peac_dev/force-app/main/default/objects/Account_Snapshot__c/Account_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Object to store the Account Stages Snapshot</description>
    <label>Account Snapshot</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>