peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Snapshots</relationshipLabel>
    <relationshipName>Account_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>