peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>