peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Account_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Website</label>
    <type>Url</type>
</CustomField>