peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Annual_Lease_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Lease_Volume__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Lease Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>