peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Average_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Average Deal Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>