peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Chart_Room_Visits__c.field-meta.xml
<CustomField>
    <fullName>Chart_Room_Visits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chart Room Visits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>