peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Close_Type__c.field-meta.xml
<CustomField>
    <fullName>Close_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>