peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision Maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>