peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Do_you_currently_offer_monthly_payments__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_offer_monthly_payments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Do you currently offer monthly payments?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>