peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/E_commerce_Tools__c.field-meta.xml
<CustomField>
    <fullName>E_commerce_Tools__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>E-commerce Tools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>