peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/End_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>End_User_Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End User Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>