peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Entanglement_Tools__c.field-meta.xml
<CustomField>
    <fullName>Entanglement_Tools__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entanglement Tools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>