peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Formal__c.field-meta.xml
<CustomField>
    <fullName>Formal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Formal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>