peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/How_do_you_overcome_price_objections__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_overcome_price_objections__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How do you overcome price objections?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>