peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Make_Take__c.field-meta.xml
<CustomField>
    <fullName>Make_Take__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Make/Take</label>
    <length>255</length>
    <type>Text</type>
</CustomField>