peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Marketing_Integration__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Integration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>