peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/New_Product_Launches__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Launches__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Product Launches</label>
    <length>25</length>
    <type>Text</type>
</CustomField>