peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/No_of_Sales_Reps__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sales_Reps__c</fullName>
    <label>No of Sales Reps ?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>