peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Quarterly_Business_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Business_Reviews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarterly Business Reviews</label>
    <type>Checkbox</type>
</CustomField>