peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Quarterly_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Promotions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quarterly Promotions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>