peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Referral_Networking__c.field-meta.xml
<CustomField>
    <fullName>Referral_Networking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Networking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>