peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Reward_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Reward_Incentives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reward &amp; Incentives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>