peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Sales_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>