peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Sales_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Sales_Pitch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Pitch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>