peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Sales_Training__c.field-meta.xml
<CustomField>
    <fullName>Sales_Training__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>