peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Tradeshow_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tradeshow Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>