peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Vendor_Approval__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Approval</label>
    <type>Checkbox</type>
</CustomField>