peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Vendor_Visits__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Visits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Visits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>