peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/Volume_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Volume_Commitments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Volume Commitments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>