peac_dev/force-app/main/default/objects/Account_Snapshot__c/fields/What_are_your_annual_sales__c.field-meta.xml
<CustomField>
    <fullName>What_are_your_annual_sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What are your annual sales ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>